--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
             "./issweb/",
             "./ginfes/"
         ]
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
     }
 }
