--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,10 @@
             "": ["./"]
         },
         "classmap": [
+            "./generico/",
+            "./sigep/",
             "./issweb/",
             "./ginfes/"
         ]
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9"
     }
 }
